--- a/lab10/css/lab.css
+++ b/lab10/css/lab.css
@@ -9,23 +9,33 @@ head {
 }
 
 body {
-  width: 500px;
-  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTweCG5ACKWZISaYxo0RKIND0lNuO54p8XYQ&usqp=CAU");
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfjlaOrmuFja_d1hL3X72QX1WYzJmiv_LyXQ&usqp=CAU");
+  background-position: right;
 }
 
+div {
+  width: 500px;
+  background-color: lightgreen;
+}
 
 h2 {
   color: darkgreen;
+  width: 500px;
   background-color: lightgreen;
 }
 
 p {
-  color: ff6600;
+  color: brown;
+  width: 500px;
   background-color: #ff9d5c;
+}
+
+label {
+  color: brown;
 }
 
 div#output {
   width: 500px;
   height: 250px;
-  background-color: grey;
+  background-color: #ff9c5d;
 }
